--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -47,6 +47,9 @@ jobs:
         run: |
           FILE_PATH="README.md"
           FILE_CONTENT=$(cat $FILE_PATH)
+          FILE_CONTENT="${FILE_CONTENT//'%'/'%25'}"
+          FILE_CONTENT="${FILE_CONTENT//$'\n'/'%0A'}"
+          FILE_CONTENT="${FILE_CONTENT//$'\r'/'%0D'}"
           echo "::set-output name=file_content::$FILE_CONTENT"
 
       - name: Send notification to Slack
@@ -55,5 +58,5 @@ jobs:
         run: |
           FILE_CONTENT="${{ steps.read_file.outputs.file_content }}"
           curl -X POST -H 'Content-type: application/json' --data \
-          '{"text":"New push to the repository: ${{ github.repository }} by ${{ github.actor }}\n\nCommit message: ${{ github.event.head_commit.message }}\n\nFile content:\n'$FILE_CONTENT'"}' \
+          "{\"text\":\"New push to the repository: ${{ github.repository }} by ${{ github.actor }}\n\nCommit message: ${{ github.event.head_commit.message }}\n\nFile content:\n$FILE_CONTENT\"}" \
           $SLACK_WEBHOOK_URL
